contact us form php corrected to right for names

--- a/contact.html
+++ b/contact.html
@@ -69,6 +69,7 @@
             </div>
         </header>
 
+<!-- Contact phone & email-->
 <div class="fcf-body">
 
     <div id="fcf-form">
@@ -88,8 +89,8 @@
     <br>
     <h2>Or fill in the form below</h2>
     <br>
-
-    <form id="fcf-form-id" class="fcf-form-class" method="post" action="contact-form-process.php">
+    <!-- Contact us form-->
+    <form id="fcf-form-id" class="fcf-form-class" action="contact.php" method="post">
         
         <div class="fcf-form-group">
             <label for="Name" class="fcf-label">Name *</label>
