--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             </div>
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <ul class="social-icons">
-                    <li><a class="facebook" href="#"><i class="fab fa-facebook-square"></i></a></li>   
+                    <li><a class="facebook" href="https://www.facebook.com/SuttonElectricalServices/" target="_blank"><i class="fab fa-facebook-square"></i></a></li>   
                 </ul>
             </div>
         </div>
