services basic outline added

--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
     <h2>Or fill in the form below</h2>
     <br>
     <!-- Contact us form-->
-    <form id="fcf-form-id" class="fcf-form-class" action="contact.php" method="post">
+    <form id="fcf-form-id" class="fcf-form-class" action="contact.php" method="POST">
         
         <div class="fcf-form-group">
             <label for="Name" class="fcf-label">Name *</label>
