--- a/index.html
+++ b/index.html
@@ -69,18 +69,22 @@
     <div class="logo">
         <img class="mx-auto d-block logo animate__animated animate__zoomIn" src="assets/images/bundylogo.jpg" width="300">
     </div>
-
-    <div class="company-header hidemobile">
+</header>
+<div id="delivery-banner" class="row text-center">
+    <div class="col bg-black text-white">
+        <div class="company-header">
         <div class="container">
             <h1 id="company-name">Sutton Electrical Services</h1>
             <p class="hidemobile">Serving you better, everyday</p>
             <a href="contact.html" class="button button-primary hidemobile">Contact</a>
         </div>
-    </div>
-</header>
+    </div>                
+    </div>            
+</div>
 
 <img class="img-fluid" src="assets/images/lightbulb.jpg" alt="image of lightbulb">
 
+<!-- About us section -->
 <div class="container" id="aboutus">
     <div class="row">
         <div class="card text-center aboutbundy col-12">
@@ -96,81 +100,82 @@
                 <a href="contact.html" class="btn button-primary">Contact</a>
             </div>
         </div>
-        </div>
-        </div>
+    </div>
+</div>
 
-        <!-- Coronavirus notice -->
-        <div class="container cvnotice d-flex justify-content-center">
-            <div class="row">
-                <div class="col">
-                    <p>
-                        <button class="btn button-primary shadow-none" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                            <i class="fas fa-shield-virus"></i> Coronavirus notice
-                        </button>
-                    </p>
-                    <div class="collapse" id="collapseExample">
-                        <div class="card card-body text-center">
-                            <strong>We do everything we can to work and operate in a safe environment, this includes</strong>
-                            <ul class="list-group">
-                                <li class="list-group-item">Doing this</li>
-                                <li class="list-group-item">Doing that</li>
-                                <li class="list-group-item">Doing something else</li>
-                                <li class="list-group-item">And even other stuff</li>
-                            </ul>
-                        </div>
+<!-- Coronavirus notice -->
+<div class="container cvnotice d-flex justify-content-center">
+    <div class="row">
+        <div class="col">
+            <p>
+                <button class="btn button-primary shadow-none" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                    <i class="fas fa-shield-virus"></i> Coronavirus notice
+                </button>
+            </p>
+            <div class="collapse" id="collapseExample">
+                <div class="card card-body text-center">
+                    <strong>We do everything we can to work and operate in a safe environment, this includes</strong>
+                    <ul class="list-group">
+                        <li class="list-group-item">Doing this</li>
+                        <li class="list-group-item">Doing that</li>
+                        <li class="list-group-item">Doing something else</li>
+                        <li class="list-group-item">And even other stuff</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Testimonials -->
+<h1 id="testimonials">Testimonials</h1>
+
+<section id="content" class="content">
+    <div class="row row-cols-1 row-cols-md-3 g-4 wow animate__animated animate__zoomIn">
+        <div class="col">
+            <div class="card ">
+                <img src="assets/images/electricianimage.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        <strong>A testimonial here</strong>
+                    </h5>
+                    <p class="card-text">This says how great Bundy is and what a fantastic job he did when he did what he did</p>
+                    <div class="card-footer">
+                        <small class="text-muted">Jim Smith: February 2021</small>
                     </div>
                 </div>
             </div>
         </div>
-
-        <h1 id="testimonials">Testimonials</h1>
-
-        <section id="content" class="content">
-            <div class="row row-cols-1 row-cols-md-3 g-4 wow animate__animated animate__zoomIn">
-                <div class="col">
-                    <div class="card ">
-                        <img src="assets/images/electricianimage.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">
-                                <strong>A testimonial here</strong>
-                            </h5>
-                            <p class="card-text">This says how great Bundy is and what a fantastic job he did when he did what he did</p>
-                            <div class="card-footer">
-                                <small class="text-muted">Jim Smith: February 2021</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card">
-                        <img src="assets/images/electricianimage.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">
-                                <strong>A second one here</strong>
-                            </h5>
-                            <p class="card-text">This says how great Bundy is and what a fantastic job he did when he did what he did</p>
-                            <div class="card-footer">
-                                <small class="text-muted">John Smith: March 2021</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card">
-                        <img src="assets/images/electricianimage.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">
-                                <strong>And a third one here</strong>
-                            </h5>
-                            <p class="card-text">This says how great Bundy is and what a fantastic job he did when he did what he did</p>
-                            <div class="card-footer">
-                                <small class="text-muted">Fred Smith: April 2021</small>
-                            </div>
-                        </div>
+        <div class="col">
+            <div class="card">
+                <img src="assets/images/electricianimage.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        <strong>A second one here</strong>
+                    </h5>
+                    <p class="card-text">This says how great Bundy is and what a fantastic job he did when he did what he did</p>
+                    <div class="card-footer">
+                        <small class="text-muted">John Smith: March 2021</small>
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="assets/images/electricianimage.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        <strong>And a third one here</strong>
+                    </h5>
+                    <p class="card-text">This says how great Bundy is and what a fantastic job he did when he did what he did</p>
+                    <div class="card-footer">
+                        <small class="text-muted">Fred Smith: April 2021</small>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 <!-- Site footer -->
 <footer class="site-footer mt-3">
@@ -179,9 +184,10 @@
             <div class="col-sm-12 col-md-6">
             <h6><strong>About Us</strong></h6>
             <p class="text-justify">Stuff here about how great Bundy is and how he can do amazing stuff with wires and all that.
-                <br><br>
+            <br><br>
             It can't be said how amazing Bundy is at all this stuff, just brilliant.<p>
             </div>
+
 
             <div class="col-xs-6 col-md-3">
             <h6><strong>Services</strong></h6>
@@ -216,7 +222,7 @@
             </div>
         </div>
     </div>
-<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 </footer>
 
 <script src="scripts/scripts.js"></script>
