--- a/services.html
+++ b/services.html
@@ -1,23 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<meta name="Description" content="Enter your description here"/>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-<link rel="stylesheet" href="assets/css/style.css">
-<title>Sutton Electrical Services</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" href="favicon.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="css/animate.css">
+    <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="scripts/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
+    <title>Sutton Electrical Services</title>
 </head>
 
 <body>
 
-<a href="index.html">Home</a>
-<br>
+<header class="header-area">
+    <nav class="navbar navbar-expand-md navbar-dark">
+        <div class="container">
+            <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#main-nav">
+                <span class="menu-icon-bar"></span>
+                <span class="menu-icon-bar"></span>
+                <span class="menu-icon-bar"></span>
+            </button>
 
-<h2 id="domesticservices">Domestic Services</h2>
+            <div id="main-nav" class="collapse navbar-collapse">
+                <ul class="navbar-nav">
+                    <li>
+                        <a href="index.html" class="nav-item nav-link active">
+                            <i class="fas fa-home"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#aboutus" class="nav-item nav-link">About Us</a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="services.html" class="nav-item nav-link" data-toggle="dropdown">Services</a>
+                        <div class="dropdown-menu">
+                            <a href="services.html#domesticservices" class="dropdown-item">Domestic services</a>
+                            <a href="services.html#corporateservices" class="dropdown-item">Corporate services</a>
+                            <a href="services.html#generalservices" class="dropdown-item">General services</a>
+                        </div>
+                    </li>
+                    <li class="dropdown">
+                        <a href="portfolio.html" class="nav-item nav-link" data-toggle="dropdown">Portfolio</a>
+                        <div class="dropdown-menu">
+                            <a href="portfolio.html#job1" class="dropdown-item">Bundys job I did 1</a>
+                            <a href="portfolio.html#job2" class="dropdown-item">Bundys job I did 2</a>
+                            <a href="portfolio.html#job3" class="dropdown-item">Bundys job I did 3</a>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div class="logo">
+        <img class="mx-auto d-block logo animate__animated animate__zoomIn" src="assets/images/bundylogo.jpg" width="300">
+    </div>
+</header>
+<div id="delivery-banner" class="row text-center">
+    <div class="col bg-black text-white">
+        <div class="company-header">
+        <div class="container">
+            <h1 id="company-name">Sutton Electrical Services</h1>
+            <p class="hidemobile">Serving you better, everyday</p>
+            <a href="contact.html" class="button button-primary hidemobile">Contact</a>
+        </div>
+    </div>                
+    </div>            
+</div>
+<h2 class="text-center wow animate__animated animate__zoomInUp">Domestic Services</h1>
+<div class="wow animate__animated animate__zoomInUp">
+    <div class="row">
+        <div class="col">
+            <div class="card">
+            <img src="assets/images/electricianimage.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Domestic Services</h5>
+                <p class="card-text"><strong>We can do all your electrical work at home.</strong></p>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">We do this for people</li>
+                <li class="list-group-item">We do that for people</li>
+                <li class="list-group-item">We do the other for people</li>
+            </ul>
+        </div>
+    </div>
+</div>
 <hr>
 
 <h2 id="corporateservices">Corporate Services</h2>
@@ -25,4 +106,56 @@
 
 <h2 id="generalservices">General Services</h2>
 
+<!-- Site footer -->
+<footer class="site-footer mt-3">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-12 col-md-6">
+            <h6><strong>About Us</strong></h6>
+            <p class="text-justify">Stuff here about how great Bundy is and how he can do amazing stuff with wires and all that.
+            <br><br>
+            It can't be said how amazing Bundy is at all this stuff, just brilliant.<p>
+            </div>
+
+
+            <div class="col-xs-6 col-md-3">
+            <h6><strong>Services</strong></h6>
+            <ul class="footer-links">
+                <li><a href="services.html#domesticservices">Domestic Services</a></li>
+                <li><a href="services.html#corporateservices">Corporate Services</a></li>
+                <li><a href="services.html#generalservices">General Services</a></li>
+            </ul>
+            </div>
+
+            <div class="col-xs-6 col-md-3">
+            <h6><strong>Quick Links</strong></h6>
+            <ul class="footer-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html##aboutus">About Us</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+            </div>
+        </div>
+        <hr>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 col-sm-6 col-xs-12">
+                <p class="copyright-text"><small>Copyright &copy; 2021 All Rights Reserved by Stuart Cox</small></p>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <ul class="social-icons">
+                    <li><a class="facebook" href="https://www.facebook.com/SuttonElectricalServices/" target="_blank"><i class="fab fa-facebook-square"></i></a></li>   
+                </ul>
+            </div>
+        </div>
+    </div>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+</footer>
+
+<script src="scripts/scripts.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
