services.html page basic started

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </div>                
     </div>            
 </div>
-
+<!-- Main page hero image -->
 <img class="img-fluid" src="assets/images/lightbulb.jpg" alt="image of lightbulb">
 
 <!-- About us section -->
