--- a/services.html
+++ b/services.html
@@ -81,15 +81,36 @@
     </div>                
     </div>            
 </div>
-<h2 class="text-center wow animate__animated animate__zoomInUp">Domestic Services</h1>
-<div class="wow animate__animated animate__zoomInUp">
+<!-- Domestic services section -->
+<h2 class="text-center bg-black text-white wow animate__animated animate__zoomInUp mb-5 text-center">Domestic Services</h2>
+<div class="text-center wow animate__animated animate__zoomInUp">
     <div class="row">
         <div class="col">
             <div class="card">
-            <img src="assets/images/electricianimage.jpg" class="card-img-top" alt="...">
+            <img src="assets/images/domesticjob.jpg" class="card-img-top wow animate__animated animate__zoomInUp" alt="domestic services image">
             <div class="card-body">
-                <h5 class="card-title">Domestic Services</h5>
-                <p class="card-text"><strong>We can do all your electrical work at home.</strong></p>
+                <h5 class="card-title mt-3">Domestic Services</h5>
+                <p class="card-text mt-3"><strong>We can do all your electrical work at home.</strong></p>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">We do this for people</li>
+                <li class="list-group-item">We do that for people</li>
+                <li class="list-group-item">We do the other for people</li>
+            </ul>
+        </div>
+    </div>
+</div>
+<hr>
+<!-- Commercial services section -->
+<h2 class="text-center bg-black text-white wow animate__animated animate__zoomInUp mb-5 text-center">Domestic Services</h2>
+<div class="text-center wow animate__animated animate__zoomInUp">
+    <div class="row">
+        <div class="col">
+            <div class="card">
+            <img src="assets/images/domesticjob.jpg" class="card-img-top wow animate__animated animate__zoomInUp" alt="domestic services image">
+            <div class="card-body">
+                <h5 class="card-title mt-3">Commercial Services</h5>
+                <p class="card-text mt-3"><strong>We can do all your electrical work commercially.</strong></p>
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">We do this for people</li>
