--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     </div>
 </div>
 </header>
-<div>
+<div class="bgmatch">
     <div class="container wow animate__animated animate__zoomInUp">
         <div class="row">
             <div class="col text-center">
@@ -90,7 +90,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         </div>
     </div>
 </div>
-<h2 class="text-center mt-5 wow animate__animated animate__zoomInUp"><strong>This is a house I did</strong></h2>
+<h2 class="text-center bgmatch wow animate__animated animate__zoomInUp"><strong>This is a house I did</strong></h2>
 
 <!-- Bootstrap 4 carousel -->
 <!-- Carousel 1 -->
@@ -134,7 +134,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 <hr>
 <!-- Carousel 2 -->
 
-<h2 class="text-center mt-5 wow animate__animated animate__zoomInUp mt-5" id="job2"><strong>This is a business job I did</strong></h2>
+<h2 class="text-center bgmatch mt-5 wow animate__animated animate__zoomInUp mt-5" id="job2"><strong>This is a business job I did</strong></h2>
 
 <div class="container py-0 pb-3 px-0 wow animate__animated animate__zoomInUp mt-5">
     <div id="carouselExampleIndicators2" class="mt-5 mt-md-3
@@ -175,7 +175,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 </div>
 <hr>
 <!-- Carousel 3 -->
-<h2 class="text-center wow animate__animated animate__zoomInUp mt-5" id="job3"><strong>This is another job I did</strong></h2>
+<h2 class="text-center bgmatch wow animate__animated animate__zoomInUp mt-5" id="job3"><strong>This is another job I did</strong></h2>
 
 <div class="container py-0 pb-3 px-0 wow animate__animated animate__zoomInUp">
     <div id="carouselExampleIndicators3" class="mt-5 mt-md-3
