footer lining up issues fixed

--- a/contact.html
+++ b/contact.html
@@ -127,29 +127,53 @@
     </div>
 
 </div>
-<footer class="footer-area" id="footer">
-    <nav class="navbar navbar-expand-md navbar-dark">
-		<div class="container">	
-            			
-			<div class="collapse navbar-collapse">
-				<ul class="navbar-nav">
-					<li><a href="index.html" class="nav-item nav-link active"><i class="fas fa-home"></i></a></li>
-					<li><a href="index.html#aboutus" class="nav-item nav-link">About Us</a></li>
-					<li class="dropdown">
-						<a href="services.html" class="nav-item nav-link">Services</a>
-					</li>
-					<li>
-						<a href="portfolio.html" class="nav-item nav-link">Portfolio</a>
-					</li>
-                    <li><a href="contact.html" class="nav-item nav-link">Contact</a></li>
+
+<!-- Site footer -->
+<footer class="site-footer mt-3">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-12 col-md-6">
+            <h6><strong>About Us</strong></h6>
+            <p class="text-justify">Stuff here about how great Bundy is and how he can do amazing stuff with wires and all that.
+            <br><br>
+            It can't be said how amazing Bundy is at all this stuff, just brilliant.<p>
+            </div>
+
+
+            <div class="col-xs-6 col-md-3">
+            <h6><strong>Services</strong></h6>
+            <ul class="footer-links">
+                <li><a href="services.html#domesticservices">Domestic Services</a></li>
+                <li><a href="services.html#corporateservices">Corporate Services</a></li>
+                <li><a href="services.html#generalservices">General Services</a></li>
+            </ul>
+            </div>
+
+            <div class="col-xs-6 col-md-3">
+            <h6><strong>Quick Links</strong></h6>
+            <ul class="footer-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html#aboutus">About Us</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+            </div>
+        </div>
+        <hr>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 col-sm-6 col-xs-12">
+                <p class="copyright-text"><small>Copyright &copy; 2021 All Rights Reserved by Stuart Cox</small></p>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <ul class="social-icons">
+                    <li><a class="facebook" href="https://www.facebook.com/SuttonElectricalServices/" target="_blank"><i class="fab fa-facebook-square"></i></a></li>   
                 </ul>
-                <div class ="facebook-div">
-                <a id="facebook-icon" href="https://www.facebook.com/SuttonElectricalServices/" class="nav-item nav-link" target="_blank"><i class="fab fa-facebook-square"></i></a>
-                </div>
-			</div>
-		</div>
-    </nav>
-        <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+            </div>
+        </div>
+    </div>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 </footer>
 
 <script src="scripts/scripts.js"></script>
