--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="company-header">
         <div class="container">
             <h1 id="company-name">Sutton Electrical Services</h1>
-            <p class="hidemobile">Serving you better, everyday</p>
+            <p>Serving you better, everyday</p>
             <a href="contact.html" class="button button-primary hidemobile">Contact</a>
         </div>
     </div>                
@@ -202,7 +202,7 @@
             <h6><strong>Quick Links</strong></h6>
             <ul class="footer-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="index.html##aboutus">About Us</a></li>
+                <li><a href="index.html#aboutus">About Us</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
