--- a/services.html
+++ b/services.html
@@ -70,7 +70,7 @@
         <img class="mx-auto d-block logo animate__animated animate__zoomIn" src="assets/images/bundylogo.jpg" width="300">
     </div>
 </header>
-<div id="delivery-banner" class="row text-center">
+<div id="delivery-banner" class="row text-center mb-2">
     <div class="col bg-black text-white">
         <div class="company-header">
         <div class="container">
@@ -82,7 +82,8 @@
     </div>            
 </div>
 <!-- Domestic services section -->
-<h2 class="text-center bg-black text-white wow animate__animated animate__zoomInUp mb-5 text-center">Domestic Services</h2>
+<div id="domesticservices">
+<h2 class="text-white wow animate__animated animate__zoomInUp text-center services-section">Domestic Services</h2>
 <div class="text-center wow animate__animated animate__zoomInUp">
     <div class="row">
         <div class="col">
@@ -100,14 +101,16 @@
         </div>
     </div>
 </div>
-<hr>
-<!-- Commercial services section -->
-<h2 class="text-center bg-black text-white wow animate__animated animate__zoomInUp mb-5 text-center">Domestic Services</h2>
+</div>
+
+<!-- Corporate services section -->
+<div id="corporateservices">
+<h2 class="text-white wow animate__animated animate__zoomInUp text-center services-section">Corporate Services</h2>
 <div class="text-center wow animate__animated animate__zoomInUp">
     <div class="row">
         <div class="col">
             <div class="card">
-            <img src="assets/images/domesticjob.jpg" class="card-img-top wow animate__animated animate__zoomInUp" alt="domestic services image">
+            <img src="assets/images/office.jpg" class="card-img-top wow animate__animated animate__zoomInUp" alt="domestic services image">
             <div class="card-body">
                 <h5 class="card-title mt-3">Commercial Services</h5>
                 <p class="card-text mt-3"><strong>We can do all your electrical work commercially.</strong></p>
@@ -120,12 +123,29 @@
         </div>
     </div>
 </div>
-<hr>
+</div>
 
-<h2 id="corporateservices">Corporate Services</h2>
-<hr>
-
-<h2 id="generalservices">General Services</h2>
+<!-- General services section -->
+<div id="generalservices">
+<h2 class="text-white wow animate__animated animate__zoomInUp text-center services-section">General Services</h2>
+<div class="text-center wow animate__animated animate__zoomInUp">
+    <div class="row">
+        <div class="col">
+            <div class="card">
+            <img src="assets/images/electrician.jpg" class="card-img-top wow animate__animated animate__zoomInUp" alt="domestic services image">
+            <div class="card-body">
+                <h5 class="card-title mt-3">General Services</h5>
+                <p class="card-text mt-3"><strong>We can do other stuff too.</strong></p>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">We do this for people</li>
+                <li class="list-group-item">We do that for people</li>
+                <li class="list-group-item">We do the other for people</li>
+            </ul>
+        </div>
+    </div>
+</div>
+</div>
 
 <!-- Site footer -->
 <footer class="site-footer mt-3">
@@ -152,7 +172,7 @@
             <h6><strong>Quick Links</strong></h6>
             <ul class="footer-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="index.html##aboutus">About Us</a></li>
+                <li><a href="index.html#aboutus">About Us</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
