--- a/portfolio.html
+++ b/portfolio.html
@@ -217,14 +217,15 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 
 <!-- Site footer -->
 <footer class="site-footer mt-3">
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12 col-md-6">
             <h6><strong>About Us</strong></h6>
             <p class="text-justify">Stuff here about how great Bundy is and how he can do amazing stuff with wires and all that.
-                <br><br>
+            <br><br>
             It can't be said how amazing Bundy is at all this stuff, just brilliant.<p>
             </div>
+
 
             <div class="col-xs-6 col-md-3">
             <h6><strong>Services</strong></h6>
@@ -239,7 +240,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
             <h6><strong>Quick Links</strong></h6>
             <ul class="footer-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="index.html##aboutus">About Us</a></li>
+                <li><a href="index.html#aboutus">About Us</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -254,12 +255,12 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
             </div>
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <ul class="social-icons">
-                    <li><a class="facebook" href="#"><i class="fab fa-facebook-square"></i></a></li>   
+                    <li><a class="facebook" href="https://www.facebook.com/SuttonElectricalServices/" target="_blank"><i class="fab fa-facebook-square"></i></a></li>   
                 </ul>
             </div>
         </div>
     </div>
-<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 </footer>
 
 <script src="scripts/scripts.js"></script>
