email copy to clipboard working

--- a/contact.html
+++ b/contact.html
@@ -78,12 +78,19 @@
     <br>
     <h2>Call</h2>
     <br>
-    <h2 class="btn button-primary contactlink"><i class="fas fa-phone"></i>  <a class="contactlink" href="tel: 07734-9020900">07734-9020900</h2></a>
+    <h2 class="btn button-primary contactlink"><i class="fas fa-phone"></i>  <a class="contactlink" href="tel: 07734-9020900">07734-9020900</a></h2>
     <br>
     <br>
     <h2>Email</h2>
     <br>
-    <h2><i class="fas fa-envelope-open-text"></i>  alan@suttonelectricalservices.net</h2>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+
+    <div>
+        <div id="email-signature" > 
+            alan@suttonelectricalservices.net
+        </div>
+            <button class="button button-primary" onclick="copyToClipboard('#email-signature')">Copy email to clipboard</button>   
+    </div>
     <br>
     <hr>
     <br>
