--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="container">
             <h1 id="company-name">Sutton Electrical Services</h1>
             <p>Serving you better, everyday</p>
-            <a href="contact.html" class="button button-primary hidemobile">Contact</a>
+            <a href="contact.html" class="button button-primary">Contact</a>
         </div>
     </div>                
     </div>            
@@ -178,34 +178,33 @@
 </section>
 
 <!-- Site footer -->
-<footer class="site-footer mt-3">
+<footer class="site-footer mt-3 text-center">
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12 col-md-6">
-            <h6><strong>About Us</strong></h6>
-            <p class="text-justify">Stuff here about how great Bundy is and how he can do amazing stuff with wires and all that.
-            <br><br>
-            It can't be said how amazing Bundy is at all this stuff, just brilliant.<p>
-            </div>
-
-
-            <div class="col-xs-6 col-md-3">
-            <h6><strong>Services</strong></h6>
-            <ul class="footer-links">
-                <li><a href="services.html#domesticservices">Domestic Services</a></li>
-                <li><a href="services.html#corporateservices">Corporate Services</a></li>
-                <li><a href="services.html#generalservices">General Services</a></li>
-            </ul>
+                <h6><strong>About Us</strong></h6>
+                <p class="text-justify">Stuff here about how great Bundy is and how he can do amazing stuff with wires and all that.
+                <br><br>
+                It can't be said how amazing Bundy is at all this stuff, just brilliant.<p>
             </div>
 
             <div class="col-xs-6 col-md-3">
-            <h6><strong>Quick Links</strong></h6>
-            <ul class="footer-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html#aboutus">About Us</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
+                <h6><strong>Services</strong></h6>
+                    <ul class="footer-links">
+                        <li><a href="services.html#domesticservices">Domestic Services</a></li>
+                        <li><a href="services.html#corporateservices">Corporate Services</a></li>
+                        <li><a href="services.html#generalservices">General Services</a></li>
+                    </ul>
+            </div>
+
+            <div class="col-xs-6 col-md-3">
+                <h6><strong>Quick Links</strong></h6>
+                    <ul class="footer-links">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="index.html#aboutus">About Us</a></li>
+                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
             </div>
         </div>
         <hr>
