--- a/portfolio.html
+++ b/portfolio.html
@@ -90,12 +90,13 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         </div>
     </div>
 </div>
-<h2 class="text-center bgmatch wow animate__animated animate__zoomInUp"><strong>This is a house I did</strong></h2>
+
+<h2 class="text-white wow animate__animated animate__zoomInUp text-center services-section" id="job1">This is a house I did 1</h2>
 
 <!-- Bootstrap 4 carousel -->
 <!-- Carousel 1 -->
-<div class="container py-0 pb-3 px-0 wow animate__animated animate__zoomInUp mt-5">
-    <div id="carouselExampleIndicators" class="mt-5 mt-md-3
+<div class="container py-0 pb-3 px-0 wow animate__animated animate__zoomInUp mt-3">
+    <div id="carouselExampleIndicators" class="mt-3 mt-md-3
             mt-lg-2 col-12 col-md-10 col-lg-8 mx-auto px-0
             carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -131,36 +132,35 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         </div>
     </div>
 </div>
-<hr>
+
+<h2 class="text-white wow animate__animated animate__zoomInUp text-center services-section" id="job2">This is a house I did 2</h2>
+
 <!-- Carousel 2 -->
-
-<h2 class="text-center bgmatch mt-5 wow animate__animated animate__zoomInUp mt-5" id="job2"><strong>This is a business job I did</strong></h2>
-
-<div class="container py-0 pb-3 px-0 wow animate__animated animate__zoomInUp mt-5">
-    <div id="carouselExampleIndicators2" class="mt-5 mt-md-3
+<div class="container py-0 pb-3 px-0 wow animate__animated animate__zoomInUp mt-3">
+    <div id="carouselExampleIndicators2" class="mt-3 mt-md-3
             mt-lg-2 col-12 col-md-10 col-lg-8 mx-auto px-0
             carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators2" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators2" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators2" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="assets/images/electricianimage.jpg" class="d-block w-100" alt="job2 image1">
+                <img src="assets/images/electricianimage.jpg" class="d-block w-100" alt="job1 image1">
             </div>
             <div class="carousel-item">
-                <img src="assets/images/electricianimage.jpg" class="d-block w-100" alt="job2 image2">
+                <img src="assets/images/electricianimage.jpg" class="d-block w-100" alt="job1 image2">
             </div>
             <div class="carousel-item">
-                <img src="assets/images/electricianimage.jpg" class="d-block w-100" alt="job2 image3">
+                <img src="assets/images/electricianimage.jpg" class="d-block w-100" alt="job1 image3">
             </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators2" role="button" data-slide="prev">
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
         </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators2" role="button" data-slide="next">
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
@@ -169,39 +169,39 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 <div class="container wow animate__animated animate__zoomInUp">
     <div class="row">
         <div class="col">
-            <h2 class="down20px">Some stuff here about this job, what it involved and why you were so great. Just generally a load of stuff about how you did a great job and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. <br><br>Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that.</h2>
+            <h2 class="down20px">This carousel has 3 images but you can have as many as you want. Some stuff here about this job, what it involved and why you were so great. Just generally a load of stuff about how you did a great job and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. <br><br>Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that.</h2>
         </div>
     </div>
 </div>
-<hr>
+
+<h2 class="text-white wow animate__animated animate__zoomInUp text-center services-section" id="job3">This is a house I did 3</h2>
+
 <!-- Carousel 3 -->
-<h2 class="text-center bgmatch wow animate__animated animate__zoomInUp mt-5" id="job3"><strong>This is another job I did</strong></h2>
-
-<div class="container py-0 pb-3 px-0 wow animate__animated animate__zoomInUp">
-    <div id="carouselExampleIndicators3" class="mt-5 mt-md-3
+<div class="container py-0 pb-3 px-0 wow animate__animated animate__zoomInUp mt-3">
+    <div id="carouselExampleIndicators3" class="mt-3 mt-md-3
             mt-lg-2 col-12 col-md-10 col-lg-8 mx-auto px-0
             carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators3" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators3" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators3" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="assets/images/electricianimage.jpg" class="d-block w-100" alt="job3 image1">
+                <img src="assets/images/electricianimage.jpg" class="d-block w-100" alt="job1 image1">
             </div>
             <div class="carousel-item">
-                <img src="assets/images/electricianimage.jpg" class="d-block w-100" alt="job3 image2">
+                <img src="assets/images/electricianimage.jpg" class="d-block w-100" alt="job1 image2">
             </div>
             <div class="carousel-item">
-                <img src="assets/images/electricianimage.jpg" class="d-block w-100" alt="job3 image3">
+                <img src="assets/images/electricianimage.jpg" class="d-block w-100" alt="job1 image3">
             </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators3" role="button" data-slide="prev">
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
         </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators3" role="button" data-slide="next">
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
@@ -210,7 +210,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 <div class="container wow animate__animated animate__zoomInUp">
     <div class="row">
         <div class="col">
-            <h2 class="down20px">Some stuff here about this job, what it involved and why you were so great. Just generally a load of stuff about how you did a great job and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. <br><br>Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that.</h2>
+            <h2 class="down20px">This carousel has 3 images but you can have as many as you want. Some stuff here about this job, what it involved and why you were so great. Just generally a load of stuff about how you did a great job and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. <br><br>Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that.</h2>
         </div>
     </div>
 </div>
