1 testemonial and tagline updated

--- a/contact.html
+++ b/contact.html
@@ -76,12 +76,12 @@
     <h1>Contact us</h1>
     <hr>
     <br>
-    <h2>Call</h2>
+    <h2><strong>Call</strong></h2>
     <br>
-    <h2 class="btn button-primary contactlink"><i class="fas fa-phone"></i>  <a class="contactlink" href="tel: 07734-9020900">07734-9020900</a></h2>
+    <h2 class="btn button-primary contactlink"><i class="fas fa-phone"></i>  <a class="contactlink" href="tel: 07734-9020900">07734-902-900</a></h2>
     <br>
     <br>
-    <h2>Email</h2>
+    <h2><strong>Email</strong></h2>
     <br>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 
@@ -89,12 +89,13 @@
         <div id="email-signature" > 
             alan@suttonelectricalservices.net
         </div>
-            <button class="button button-primary" onclick="copyToClipboard('#email-signature')">Copy email to clipboard</button>   
+        <br>
+            <button class="btn button-primary contactlink" onclick="copyToClipboard('#email-signature')">Copy email to clipboard</button>  
     </div>
     <br>
-    <hr>
+        <hr>
     <br>
-    <h2>Or fill in the form below</h2>
+    <h2><strong>Or fill in the form below</strong></h2>
     <br>
     <!-- Contact us form-->
     <form id="fcf-form-id" class="fcf-form-class" action="contact.php" method="POST">
@@ -187,6 +188,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
 </body>
 </html>
