--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="company-header">
         <div class="container">
             <h1 id="company-name">Sutton Electrical Services</h1>
-            <p>Serving you better, everyday</p>
+            <p>Friendly and reliable service</p>
             <a href="contact.html" class="button button-primary">Contact</a>
         </div>
     </div>                
@@ -92,11 +92,10 @@
                 Sutton Electrical Services
             </div>
             <div class="card-body">
-                <h5 class="card-title">Serving you better, everyday</h5>
-                <p class="card-text">Serving the Brandon Community in all forms of commercial and domestic electrical work.
-                    <br><br>
-                Doing loads of stuff just for you and generally just being really great at what he does etc.
-                </p>
+                <h5 class="card-title">Friendly and reliable service</h5>
+                <p class="card-text">Covering all of Suffolk, Norfolk and Cambridgeshire for all domestic, commercial and industrial work.<br><br>
+                    We can undertake all types of electrical work for you, including new builds, full rewires, extensions, heating systems, CCTV and security system installation, testing and inspection, additions and alterations, EICR (Electrical Installation Condition Reports) and garden or outdoor installations. 
+                <br><br>
                 <a href="contact.html" class="btn button-primary">Contact</a>
             </div>
         </div>
@@ -116,10 +115,11 @@
                 <div class="card card-body text-center">
                     <strong>We do everything we can to work and operate in a safe environment, this includes</strong>
                     <ul class="list-group">
-                        <li class="list-group-item">Doing this</li>
-                        <li class="list-group-item">Doing that</li>
-                        <li class="list-group-item">Doing something else</li>
-                        <li class="list-group-item">And even other stuff</li>
+                        <li class="list-group-item">Regularly washing and sanitising hands on entering a property</li>
+                        <li class="list-group-item">Maintaining social distancing</li>
+                        <li class="list-group-item">Cleaning of all touchpoints when leaving a property</li>
+                        <li class="list-group-item">Wearing of masks as needed</li>
+                        <li class="list-group-item">A pre-arrival check for any symptoms</li>
                     </ul>
                 </div>
             </div>
@@ -134,14 +134,20 @@
     <div class="row row-cols-1 row-cols-md-3 g-4 wow animate__animated animate__zoomIn">
         <div class="col">
             <div class="card ">
-                <img src="assets/images/electricianimage.jpg" class="card-img-top" alt="...">
+                <img src="assets/images/testemonial1.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">
-                        <strong>A testimonial here</strong>
+                        <strong>From a rewire of a Victorian house</strong>
                     </h5>
-                    <p class="card-text">This says how great Bundy is and what a fantastic job he did when he did what he did</p>
+                    <p class="card-text">Alan is a very likeable and reliable tradesman.
+                        
+                        I found him to be full of good advice which helped enormously with our project on a period property.<br><br>
+
+                        The standard of work was excellent with things left clean and tidy, even our dogs liked him!!
+
+                        We will definitely use Alan again and can't recommend him enough</p>
                     <div class="card-footer">
-                        <small class="text-muted">Jim Smith: February 2021</small>
+                        <small class="text-muted">Carl Pryke</small>
                     </div>
                 </div>
             </div>
@@ -183,9 +189,9 @@
         <div class="row">
             <div class="col-sm-12 col-md-6">
                 <h6><strong>About Us</strong></h6>
-                <p class="text-justify">Stuff here about how great Bundy is and how he can do amazing stuff with wires and all that.
+                <p class="text-justify">Covering all of Suffolk, Norfolk and Cambridgeshire for all domestic, commercial and industrial work.
                 <br><br>
-                It can't be said how amazing Bundy is at all this stuff, just brilliant.<p>
+                We can undertake all types of electrical work for you, including new builds, full rewires, extensions, heating systems, CCTV and security system installation, testing and inspection, additions and alterations, EICR (Electrical Installation Condition Reports) and garden or outdoor installations..<p>
             </div>
 
             <div class="col-xs-6 col-md-3">
