--- a/index.html
+++ b/index.html
@@ -94,7 +94,29 @@
             <div class="card-body">
                 <h5 class="card-title">Friendly and reliable service</h5>
                 <p class="card-text">Covering all of Suffolk, Norfolk and Cambridgeshire for all domestic, commercial and industrial work.<br><br>
-                    We can undertake all types of electrical work for you, including new builds, full rewires, extensions, heating systems, CCTV and security system installation, testing and inspection, additions and alterations, EICR (Electrical Installation Condition Reports) and garden or outdoor installations. 
+                Sutton electrical services have been offering domestic, commercial and residential electrical work since 2016. With 21 years of experience as an electrician, owner Alan provides a high-quality reliable, trustworthy service, with all work finished to a very high standard. Specialising in domestic services, and able to undertake all types of electrical work for you.
+                <br><br>
+                <div class="container">
+                    <div class="row">
+                        <div class="col">
+                            <div class="card">
+                                <div class="card-header">
+                                    Services include
+                                </div>
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item">New builds</li>
+                                    <li class="list-group-item">Full rewires</li>
+                                    <li class="list-group-item">Extensions</li>
+                                    <li class="list-group-item">Heating systems including smart systems</li>
+                                    <li class="list-group-item">CCTV & security systems</li>
+                                    <li class="list-group-item">Testing & inspections</li>
+                                    <li class="list-group-item">EICR (Electrical Installation Condition Reports)</li>
+                                    <li class="list-group-item">Garden & outdoor installations</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <br><br>
                 <a href="contact.html" class="btn button-primary">Contact</a>
             </div>
@@ -191,7 +213,7 @@
                 <h6><strong>About Us</strong></h6>
                 <p class="text-justify">Covering all of Suffolk, Norfolk and Cambridgeshire for all domestic, commercial and industrial work.
                 <br><br>
-                We can undertake all types of electrical work for you, including new builds, full rewires, extensions, heating systems, CCTV and security system installation, testing and inspection, additions and alterations, EICR (Electrical Installation Condition Reports) and garden or outdoor installations..<p>
+                Sutton electrical services have been offering domestic, commercial and residential electrical work since 2016. With 21 years of experience as an electrician, owner Alan provides a high-quality reliable, trustworthy service, with all work finished to a very high standard. Specialising in domestic services, and able to undertake all types of electrical work for you.<p>
             </div>
 
             <div class="col-xs-6 col-md-3">
