--- a/portfolio.html
+++ b/portfolio.html
@@ -128,12 +128,12 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 <div class="container wow animate__animated animate__zoomInUp">
     <div class="row">
         <div class="col">
-            <h2 class="down20px">This carousel has 3 images but you can have as many as you want. Some stuff here about this job, what it involved and why you were so great. Just generally a load of stuff about how you did a great job and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. <br><br>Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that.</h2>
+            <h2 class="down20px text-center">This carousel has 3 images but you can have as many as you want. Some stuff here about this job, what it involved and why you were so great. Just generally a load of stuff about how you did a great job and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. <br><br>Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that.</h2>
         </div>
     </div>
 </div>
 
-<h2 class="text-white wow animate__animated animate__zoomInUp text-center services-section" id="job2">This is a house I did 2</h2>
+<h2 class="text-white wow animate__animated animate__zoomInUp text-center services-section" id="job2">This bar needed to add light for the staff to work, but retain a subdued ambiance for customers</h2>
 
 <!-- Carousel 2 -->
 <div class="container py-0 pb-3 px-0 wow animate__animated animate__zoomInUp mt-3">
@@ -147,20 +147,20 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="assets/images/electricianimage.jpg" class="d-block w-100" alt="job1 image1">
+                <img src="assets/images/bar1.jpg" class="d-block w-100" alt="job2 image1">
             </div>
             <div class="carousel-item">
-                <img src="assets/images/electricianimage.jpg" class="d-block w-100" alt="job1 image2">
+                <img src="assets/images/bar2.jpg" class="d-block w-100" alt="job2 image2">
             </div>
             <div class="carousel-item">
-                <img src="assets/images/electricianimage.jpg" class="d-block w-100" alt="job1 image3">
+                <img src="assets/images/bar3.jpg" class="d-block w-100" alt="job2 image3">
             </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <a class="carousel-control-prev" href="#carouselExampleIndicators2" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
         </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <a class="carousel-control-next" href="#carouselExampleIndicators2" role="button" data-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
@@ -169,7 +169,11 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 <div class="container wow animate__animated animate__zoomInUp">
     <div class="row">
         <div class="col">
-            <h2 class="down20px">This carousel has 3 images but you can have as many as you want. Some stuff here about this job, what it involved and why you were so great. Just generally a load of stuff about how you did a great job and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. <br><br>Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that.</h2>
+            <h2 class="down20px text-center">This local bar had a brief to retain the customer side speakeasy ambiance, but at the same time provide an environment that the bar team could effectively work in.
+                <br>
+                <br>
+            This brief was achieved by the placement of subtle outward facing LED's, designed to cast light locally on the bar rather than throughout the wider space. At the same time the behind bar lighting was purely practical, with the aim of casting light on the places where the bar team needed to see.
+            </h2>
         </div>
     </div>
 </div>
@@ -210,7 +214,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 <div class="container wow animate__animated animate__zoomInUp">
     <div class="row">
         <div class="col">
-            <h2 class="down20px">This carousel has 3 images but you can have as many as you want. Some stuff here about this job, what it involved and why you were so great. Just generally a load of stuff about how you did a great job and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. <br><br>Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that.</h2>
+            <h2 class="down20px text-center">This carousel has 3 images but you can have as many as you want. Some stuff here about this job, what it involved and why you were so great. Just generally a load of stuff about how you did a great job and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. <br><br>Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that.</h2>
         </div>
     </div>
 </div>
