--- a/services.html
+++ b/services.html
@@ -94,9 +94,14 @@
                 <p class="card-text mt-3"><strong>We can do all your electrical work at home.</strong></p>
             </div>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">We do this for people</li>
-                <li class="list-group-item">We do that for people</li>
-                <li class="list-group-item">We do the other for people</li>
+                <li class="list-group-item">New builds</li>
+                <li class="list-group-item">Full rewires</li>
+                <li class="list-group-item">Extensions</li>
+                <li class="list-group-item">Heating systems including smart systems</li>
+                <li class="list-group-item">CCTV & security systems</li>
+                <li class="list-group-item">Testing & inspections</li>
+                <li class="list-group-item">EICR (Electrical Installation Condition Reports)</li>
+                <li class="list-group-item">Garden & outdoor installations</li>
             </ul>
         </div>
     </div>
